# imjord_tauri_games_launcher

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx  styles.css
src-tauri/: Cargo.toml  game_paths.txt  tauri.conf.json
src-tauri/src/: main.rs
src/component/: Footer.jsx
